--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,7 @@
 
     --popover-foreground: 0 0% 3.9%;
 
-    --primary: 0 0% 9%;
+    --primary: 142, 70%, 60%;
 
     --primary-foreground: 0 0% 98%;
 
@@ -71,7 +71,7 @@
 
     --popover-foreground: 0 0% 98%;
 
-    --primary: 0 0% 98%;
+    --primary: 142, 70%, 60%;
 
     --primary-foreground: 0 0% 9%;
 
